--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <div class="logo-placeholder">OSW</div>
+                <div class="logo-placeholder"><img src="logo.png" alt="OWS" onerror="this.style.display='none'"/></div>
                 <div class="logo-text">
                     <h1>Omphile Social Work</h1>
                     <p>& Wellness Services</p>
