--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     <p>Blending practical experience with scholarly insights, Dr. Shandu's work promotes rehabilitation, social change, and holistic support for those affected by crime and social inequality.</p>
                 </div>
                 <div class="about-image">
-                    Professional Photo of Dr. Shandu
+                     <img src="dr.jpg" alt="Professional Photo of Dr. Shandu">
                 </div>
             </div>
         </div>
