--- a/index.html
+++ b/index.html
@@ -238,6 +238,14 @@
             font-weight: bold;
             font-size: 1.2rem;
             box-shadow: var(--box-shadow);
+            overflow: hidden;
+        }
+
+        .about-image img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain; /* keeps image aspect ratio */
+            border-radius: 15px; /* optional: match parent div */
         }
         
         /* Services Section */
