--- a/index.html
+++ b/index.html
@@ -226,27 +226,24 @@
         }
         
         .about-image {
-            flex: 1;
-            min-width: 300px;
-            height: 400px;
-            background: linear-gradient(135deg, var(--light-blue), var(--primary-blue));
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: var(--white);
-            font-weight: bold;
-            font-size: 1.2rem;
-            box-shadow: var(--box-shadow);
-            overflow: hidden;
-        }
+    flex: 1;
+    min-width: 300px;
+    max-width: 500px; /* optional: controls the max size */
+    background: linear-gradient(135deg, var(--light-blue), var(--primary-blue));
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: var(--box-shadow);
+    overflow: hidden;
+    padding: 10px; /* optional: adds spacing around image */
+}
 
-        .about-image img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain; /* keeps image aspect ratio */
-            border-radius: 15px; /* optional: match parent div */
-        }
+.about-image img {
+    width: 100%;
+    height: auto; /* maintains aspect ratio */
+    border-radius: 15px;
+}
         
         /* Services Section */
         .services {
