--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omphile Social Work and Wellness Services</title>
+    <title>Omphile Social Work and Wellness Services Inc.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap">
     <style>
@@ -596,7 +596,7 @@
                 <div class="logo-placeholder">OWS</div>
                 <div class="logo-text">
                     <h1>Omphile Social Work</h1>
-                    <p>& Wellness Services</p>
+                    <p>& Wellness Services Inc.</p>
                 </div>
             </div>
             <button class="mobile-menu-btn">
