--- a/index.html
+++ b/index.html
@@ -480,6 +480,12 @@
             border-radius:1rem;
             padding:1rem
         }
+
+        .map{width:100%;
+             height:320px;
+             border:0;
+             border-radius:1rem
+        }
         
         /* Footer */
         footer {
