--- a/index.html
+++ b/index.html
@@ -476,6 +476,8 @@
 
         .card{
             background:var(--card);
+            background-color: var(--light-blue);
+            height: 400px;
             border:1px solid #e2e8f0;
             border-radius:1rem;
             padding:1rem
@@ -852,7 +854,6 @@
                     src="https://www.google.com/maps?q=Lakeview%20Terrace%2C%20Penny%20Ln%2C%20Richards%20Bay%20Central%203900&output=embed">
                   </iframe>
                   <p class="small">Find us at 4th Floor Lakeview Terrace, Penny Ln, Richards Bay Central, 3900.</p>
-                  <p class="small"><strong>Hours</strong><br>Online Sessions: Mon–Fri 16:00–20:00<br>Face‑to‑Face: Sat & Holidays 08:00–16:00<br>Sunday: Closed</p>
                 </div>
             </div>
         </div>
