--- a/index.html
+++ b/index.html
@@ -488,6 +488,12 @@
              border:0;
              border-radius:1rem
         }
+
+        .whatsapp {
+             position:fixed;right:16px;bottom:16px;background:#25D366;color:#fff;
+             width:56px;height:56px;border-radius:50%;display:flex;align-items:center;justify-content:center;
+             font-weight:700;box-shadow:0 10px 25px rgba(0,0,0,.15);z-index:60;
+       }
         
         /* Footer */
         footer {
@@ -879,7 +885,7 @@
             </div>
         </div>
     </footer>
-
+    <a class="whatsapp" href="https://wa.me/+27614837513" aria-label="Chat on WhatsApp">WA</a>
     <script>
         // Mobile menu toggle
         const menuBtn = document.querySelector('.mobile-menu-btn');
