--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
             </div>
         </div>
     </footer>
-    <a class="whatsapp" href="https://wa.me/+27614837513" aria-label="Chat on WhatsApp">WA</a>
+    <a class="whatsapp" href="https://wa.me/+27614837513" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i> WhatsApp Us!</a>
     <script>
         // Mobile menu toggle
         const menuBtn = document.querySelector('.mobile-menu-btn');
