--- a/index.html
+++ b/index.html
@@ -494,6 +494,30 @@
              width:56px;height:56px;border-radius:50%;display:flex;align-items:center;justify-content:center;
              font-weight:700;box-shadow:0 10px 25px rgba(0,0,0,.15);z-index:60;
        }
+
+        .whatsapp-btn {
+    display: inline-flex;
+    align-items: center;
+    background-color: #25D366;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    transition: background 0.3s ease;
+}
+
+.whatsapp-btn i {
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.whatsapp-btn:hover {
+    background-color: #1ebe57;
+}
+
         
         /* Footer */
         footer {
@@ -631,6 +655,7 @@
                     <li><a href="#gallery">Office Photos</a></li>
                     <li><a href="#credentials">Credentials</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://wa.me/27614837513" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp Us</a></li>
                 </ul>
             </nav>
         </div>
