--- a/index.html
+++ b/index.html
@@ -490,23 +490,40 @@
         }
 
         .whatsapp {
-             position:fixed;right:16px;bottom:16px;background:#25D366;color:#fff;
-             width:56px;height:56px;border-radius:50%;display:flex;align-items:center;justify-content:center;
-             font-weight:700;box-shadow:0 10px 25px rgba(0,0,0,.15);z-index:60;
+             position:fixed;
+             right:16px;
+             bottom:16px;
+             background:#25D366;
+             color:#fff;
+             width:56px;
+             height:56px;
+             border-radius:50%;
+             display:flex;
+             align-items:center; 
+             justify-content:center;
+             font-size: 18px;
+             font-weight: bold;
+             text-decoration: none;
+             box-shadow:0 10px 25px rgba(0,0,0,.15);
+             z-index:60;
        }
 
         .whatsapp-btn {
-    display: inline-flex;
-    align-items: center;
-    background-color: #25D366;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 12px 20px;
-    border-radius: 8px;
-    text-decoration: none;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-    transition: background 0.3s ease;
+             background:#25D366;
+             color:#fff;
+             width:56px;
+             height:56px;
+             border-radius:50%;
+             display:flex;
+             font-size: 18px;
+             font-weight: bold;
+             align-items:center; 
+             justify-content:center;
+             font-weight:700;
+             box-shadow:0 10px 25px rgba(0,0,0,.15);
+             z-index:60;
+             text-decoration: none;
+             transition: background 0.3s ease;
 }
 
 .whatsapp-btn i {
