--- a/index.html
+++ b/index.html
@@ -509,6 +509,9 @@
        }
 
         .whatsapp-btn {
+             position:fixed;
+             right:16px;
+             bottom:16px;
              background:#25D366;
              color:#fff;
              width:56px;
