--- a/index.html
+++ b/index.html
@@ -509,15 +509,14 @@
        }
 
         .whatsapp-btn {
-             position:fixed;
-             right:16px;
-             bottom:16px;
              background:#25D366;
              color:#fff;
              width:56px;
              height:56px;
              border-radius:50%;
-             display:flex;
+             display: inline-flex;
+             justify-content: center;
+             align-items: center;
              font-size: 18px;
              font-weight: bold;
              align-items:center; 
@@ -530,7 +529,7 @@
 
 .whatsapp-btn i {
     margin-right: 10px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .whatsapp-btn:hover {
