--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
         <div class="container footer-content">
             <div class="footer-logo">
                 <div class="logo-placeholder">OSW</div>
-                <h2>Omphile Social Work & Wellness Services</h2>
+                <h2>Omphile Social Work & Wellness Services Inc.</h2>
             </div>
             <div class="payment-methods">
                 <p>We accept all major medical aids, card payments and EFTs</p>
