--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     <li><a href="#gallery">Office Photos</a></li>
                     <li><a href="#credentials">Credentials</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://wa.me/27614837513" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://wa.me/27788806152" target="_blank" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a></li>
                 </ul>
             </nav>
         </div>
@@ -928,7 +928,7 @@
             </div>
         </div>
     </footer>
-    <a class="whatsapp" href="https://wa.me/+27614837513" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a class="whatsapp" href="https://wa.me/27788806152" target="_blank" aria-label="Chat on WhatsApp"><i class="fab fa-whatsapp"></i></a>
     <script>
         // Mobile menu toggle
         const menuBtn = document.querySelector('.mobile-menu-btn');
