--- a/index.html
+++ b/index.html
@@ -525,7 +525,11 @@
              z-index:60;
              text-decoration: none;
              transition: background 0.3s ease;
-}
+         }
+
+        .whatsapp i {
+           font-size: 30px;
+        }
 
 .whatsapp-btn i {
     font-size: 30px;
