--- a/index.html
+++ b/index.html
@@ -861,11 +861,10 @@
                         <div class="contact-details">
                             <h4>Operating Hours</h4>
                             <div class="hours-item">
-                                <span>Online Sessions:</span>
-                                <span>Mon-Fri [16:00-20:00]</span>
+                                <span>Online and Face-to-Face Sessions:</span>
+                                <span>Mon-Fri [14:30-19:00]</span>
                             </div>
                             <div class="hours-item">
-                                <span>Face-to-Face:</span>
                                 <span>Sat & Holidays [08:00-16:00]</span>
                             </div>
                             <div class="hours-item">
