--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                             <i class="fas fa-clock"></i>
                         </div>
                         <div class="contact-details">
-                            <h4>Operating Hours</h4>
+                            <h4>Operating Hours online and Face-to-Face</h4>
                             <div class="hours-item">
                                 <span>Online and Face-to-Face Sessions:</span>
                                 <span>Mon-Fri [14:30-19:00]</span>
